test/error/ast/NotNumberAndNotSetInMult.mod
MODULE NotNumberAndNotSetInMult;
VAR b: BOOLEAN; i: INTEGER; r: INTEGER;
BEGIN
  r := b * i;
END NotNumberAndNotSetInMult.
